front end with angular

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,13 +1,6 @@
-FROM openjdk:17 AS build
-
-# Set the working directory
+FROM openjdk:17
 WORKDIR /app
-
-# Copy the built JAR file into the image
 COPY target/*.jar app.jar
-
-# Expose the application port
 EXPOSE 8099
 
-# Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
