--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8099
+
 spring:
   application:
     name: api-gateway
@@ -7,14 +10,37 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+
+      routes:
+        - id: python-microservice
+          uri: lb://python-microservice
+          predicates:
+            - Path=/python-microservice/**
+          filters:
+            - RemoveRequestHeader=Cookie
+            - PreserveHostHeader=true
+
+        - id: microservice-quiz
+          uri: lb://microservice-quiz
+          predicates:
+            - Path=/microservice-quiz/**
+          filters:
+            - RemoveRequestHeader=Cookie
+            - PreserveHostHeader=true
+
   security:
     oauth2:
       resource-server:
         jwt:
-          issuer-uri: http://localhost:9009/realms/JobBoardKeyclock
+          issuer-uri: "http://localhost:9090/realms/group-six-cleubs"
+          #jwk-set-uri: http://localhost:9090/realms/group-six-cleubs/protocol/openid-connect/certs
 
-server:
-  port: 8099
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.web: DEBUG
+    org.springframework.security.oauth2: DEBUG
 
 eureka:
   client:
