--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,55 @@
-version: '3.8'
+version: '3'
 
 services:
-  docker-mysql:
-    image: mysql:8.0
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: houssemino
-    ports:
-      - "3306:3306"
-    volumes:
-      - db:/var/lib/mysql
-
-
-
-  discovery-service:
-    container_name: discovery-service
+  discovery-server:
     build: ./eureka
-    #image: "eureka"
-    restart: on-failure
     ports:
       - "8090:8090"
-    hostname: eureka
-    environment:
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8090/eureka/
+    restart: always
     networks:
       - app-network
-    depends_on:
-      - docker-mysql
+    environment:
+      - EUREKA_SERVER=http://discovery-server:8090/eureka/
 
   api-gateway:
-    restart: on-failure
     container_name: api-gateway
     build: ./api-gateway
     ports:
       - "8099:8099"
     environment:
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8090/eureka/
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8090/eureka/
+    depends_on:
+      - discovery-server
     networks:
       - app-network
-    depends_on:
-      - discovery-service
+
+  python-microservice:
+    build: ./news
+    volumes:
+      - ./news:/usr/src/app
+    ports:
+      - "5001:80"
+    environment:
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8090/eureka/
+    networks:
+      - app-network
+
+  keycloak:
+    container_name: keycloak
+    image: quay.io/keycloak/keycloak:26.0.5
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+    ports:
+      - "9090:8080"
+    command:
+      - "start-dev"
+      - "--http-port=8080"
+    networks:
+      - app-network
+    volumes:
+      - keycloak_data:/opt/keycloak/data
+
 
   microservice-quiz:
     restart: on-failure
@@ -49,18 +58,31 @@ services:
     ports:
       - "8092:8092"
     environment:
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service:8090/eureka/
-      - SPRING_DATASOURCE_URL=jdbc:mysql://docker-mysql:3306/Quiz?autoReconnect=true&useSSL=false
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:8090/eureka/
     networks:
       - app-network
     depends_on:
-      - discovery-service
-      - docker-mysql
+      - discovery-server
+    volumes:
+      - quiz-db-data:/app/Database/Data
+
+
+
+  website-angular:
+    build: ./angular-18
+    ports:
+      - "4200:4200"
+    depends_on:
+      - api-gateway
+    networks:
+      - app-network
 
 networks:
   app-network:
     driver: bridge
 
-
 volumes:
-  db:
+  quiz-db-data: 
+    driver: local
+  keycloak_data:
+    driver: local
