--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name=eureka
+spring.application.name=discovery-server
 
 server.port = 8090
-#eureka.instance.hostname=localhost
+eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+logging.level.com.netflix.eureka=off
+logging.level.com.netflix.discovery=off
