--- a/microservice-quiz/src/main/resources/application.properties
+++ b/microservice-quiz/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=microservice-quiz
 server.port = 8092
 
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8090/eureka
+eureka.client.service-url.defaultZone=http://localhost:8090/eureka/
 
 # H2
 spring.h2.console.enabled=true
@@ -12,7 +12,9 @@ spring.h2.console.path=/h2
 # Datasource  jdbc:h2:mem:testdb
 spring.datasource.username=Houssem
 spring.datasource.password=
-spring.datasource.url=jdbc:h2:file:./Database/Data/Quiz
+#spring.datasource.url=jdbc:h2:file:./Database/Data/Quiz
+spring.datasource.url=jdbc:h2:/app/Database/Data/Quiz
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create
 
@@ -21,6 +23,6 @@ spring.h2.console.settings.web-allow-others=true
 
 
 
-spring.cloud.config.enabled=true 
-spring.cloud.config.uri=http://localhost:8888 
-?spring.config.import=optional:configserver:http://localhost:8888/
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888/
