integrate the inscriptions's microservice

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -28,6 +28,18 @@ spring:
             - RemoveRequestHeader=Cookie
             - PreserveHostHeader=true
 
+
+        - id: microservice-inscriptions
+          uri: lb://microservice-inscriptions
+          predicates:
+            - Path=/microservice-inscriptions/**
+          filters:
+            - RemoveRequestHeader=Cookie
+            - PreserveHostHeader=true
+
+
+
+
   security:
     oauth2:
       resource-server:
