--- a/microservice-quiz/pom.xml
+++ b/microservice-quiz/pom.xml
@@ -80,6 +80,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>3.1.5</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
