--- a/microservice-quiz/src/main/resources/application.properties
+++ b/microservice-quiz/src/main/resources/application.properties
@@ -14,14 +14,16 @@ spring.datasource.username=Houssem
 spring.datasource.password=
 #spring.datasource.url=jdbc:h2:file:./Database/Data/Quiz
 spring.datasource.url=jdbc:h2:/app/Database/Data/Quiz
-
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create
-
-
 spring.h2.console.settings.web-allow-others=true
 
 
+spring.boot.admin.client.url=http://localhost:8080
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+spring.boot.admin.client.username=admin
+spring.boot.admin.client.password=admin
 
 spring.cloud.config.enabled=true
 spring.cloud.config.uri=http://localhost:8888
