--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -6,3 +6,8 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 logging.level.com.netflix.eureka=off
 logging.level.com.netflix.discovery=off
+
+
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
