--- a/microservice-inscriptions/src/main/resources/application.properties
+++ b/microservice-inscriptions/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.settings.web-allow-others=true
 eureka.client.server-url.default-zone=http://eureka:8090/eureka/
+
+
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
