--- a/microservice-forum/src/main/resources/application.properties
+++ b/microservice-forum/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create
 
 spring.h2.console.settings.web-allow-others=true
+
+
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
