--- a/server-config/src/main/resources/application.properties
+++ b/server-config/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=server-config
-
+spring.profiles.active=native
 server.port=8888
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka
-? eureka.instance.prefer-ip-address=true
-
-eureka.server.wait-time-in-ms-when-sync-empty=5 \
-  #eureka.client.register-with-eureka=true
-
-spring.profiles.active=native
+#spring.cloud.config.server.git.uri=${home}/code
+#spring.cloud.config.server.git.uri=https://github.com/houssem-eddinjallouli/Mini-Projet_Applications-Web-Distribuees
 #spring.cloud.config.server.native.searchLocations=file://${user.home}
-?spring.cloud.config.server.native.searchLocations=./src/main/resources/
+spring.cloud.config.server.native.searchLocations= classpath:/configurations
+#spring.cloud.config.server.native.searchLocations=./src/main/resources/
 
-#spring.cloud.config.server.git.uri=https://github.com/my/servercloudconfig.git
+#eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8090/eureka
+eureka.instance.prefer-ip-address=true
+
+eureka.server.wait-time-in-ms-when-sync-empty=5
