--- a/express-js-microservice/package.json
+++ b/express-js-microservice/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.1",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
-    "eureka-js-client": "^4.5.0"
+    "eureka-js-client": "^4.5.0",
+    "cors": "^2.8.5"
   }
 }
